# ml-financial-fraud-credit-card

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
financial_fraud_credit_card/: __init__.py  dataset.py  features.py  plots.py
financial_fraud_credit_card/modeling/: predict.py  train.py
financial_fraud_credit_card/utils/: cpu_benchmark.py  gpu_benchmark.py
financial_fraud_credit_card/utils/model/: deep_learning.py
notebooks/: v1-financial-fraud-detection-credit-card.ipynb  v2-financial-fraud-detection-credit-card.ipynb
